homepage  link changed

--- a/index.htm
+++ b/index.htm
@@ -13,104 +13,111 @@
     <div >
         <ul id="indexSlides_1">
           <div class="container">
-          <a href="http://google.com" class="logo"></a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="logo"></a>
 
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
             <div class="logo_world_ch">國立臺北科技大學國際事務處</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
             <div class="logo_world_en">Office of International Affairs, Taipei Tech</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/index_en.htm">
+            <div class="language_en">en</div>
+            </a>
+            <p class ="language_line" >|</p>
+            <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
+            <div class="language_ch">中</div>
+            </a>
+            <a href="https://tsejunzhen.github.io/Project_OIA/about.htm">
             <div class="world_about">關於我們</div>
             </a>
             <a href="https://tsejunzhen.github.io/Project_OIA/news.htm">
           <div class="world_new">最新消息</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
           <div class="world_guide">實用指南</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
           <div class="world_axchange">交換學生</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/contact.htm">
           <div class="world_contact">聯絡我們</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
           <div class="world_main_ch">國立台北科技大學國際事務處</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
           <div class="world_main_en">Office of International Affairs,Taipei Tech</div>
         </a>
         </ul>
     </div>
     <div id="indexSlides_2">
       <div class="container">
-      <a href="http://google.com" >
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
         <div class="icon_new"></div>
       </a>
-      <a href="http://google.com" >
+      <a href="https://tsejunzhen.github.io/Project_OIA/news.htm" >
         <div class="new_1">最新</div>
       </a>
-      <a href="http://google.com" >
+      <a href="https://tsejunzhen.github.io/Project_OIA/news.htm" >
         <div class="new_2">消息</div>
       </a>
     </a>
-    <a href="http://google.com" >
+    <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
       <div class="date_1">2017-04-26 &nbsp;&nbsp;&nbsp;台港教育獎助學金</div>
     </a>
     <div class="hr_1"></div>
-    <a href="http://google.com" >
+    <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
       <div class="date_2">2017-04-23 &nbsp;&nbsp;&nbsp;西安交通大學研習營活動</div>
     </a>
       <div class="hr_2"></div>
-    <a href="http://google.com" >
+    <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
       <div class="date_3">2017-04-20 &nbsp;&nbsp;&nbsp;西安電子科技大學夏令營</div>
     </a>
       <div class="hr_3"></div>
-    <a href="http://google.com" >
+    <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
       <div class="date_4">2017-03-26 &nbsp;&nbsp;&nbsp;106學年度學士班僑生錄取名單</div>
     </a>
       <div class="hr_4"></div>
-    <a href="http://google.com" >
+    <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
       <div class="date_5">2016-12-26 &nbsp;&nbsp;&nbsp;105學年度外國學生春季班開放申請</div>
     </a>
       <div class="hr_5"></div>
       <div class="container_panel">
       <div class="panel_group">
-      <button class="panel-heading_1" id="button_1"><span><a href="http://www.computerhope.com" style="text-decoration: none" ><font color="white">外籍生</a></span></button>
+      <button class="panel-heading_1" id="button_1"><span><a href="https://tsejunzhen.github.io/Project_OIA/IS.htm" style="text-decoration: none" ><font color="white">外籍生</a></span></button>
       <div id="wrapper_1" class="open_1">
       <ul id="list_1">
-      <a href="http://google.com" class="panel_body">·招生時間</a><br>
-      <a href="http://google.com" class="panel_body">·外籍學生申請入學流程圖</a>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·招生時間</a><br>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·外籍學生申請入學流程圖</a>
       </ul>
       </div>
 
-      <button class="panel-heading_2" id="button_2"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">僑生</a></span></button>
+      <button class="panel-heading_2" id="button_2"><span><a href="https://tsejunzhen.github.io/Project_OIA/OCS.htm" style="text-decoration: none"><font color="white">僑生</a></span></button>
       <div id="wrapper_2" class="open_2">
       <ul id="list_2">
-      <a href="http://google.com" class="panel_body">·單獨招生</a><br>
-      <a href="http://google.com" class="panel_body">·流程圖海外聯招</a><br>
-      <a href="http://google.com" class="panel_body">·流程圖本校僑生文宣</a><br>
-      <a href="http://google.com" class="panel_body">·抵臺前必讀重要資訊</a>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·單獨招生</a><br>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·流程圖海外聯招</a><br>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·流程圖本校僑生文宣</a><br>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·抵臺前必讀重要資訊</a>
     </ul>
       </div>
 
-      <button class="panel-heading_3" id="button_3"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">陸生</a></span></button>
+      <button class="panel-heading_3" id="button_3"><span><a href="https://tsejunzhen.github.io/Project_OIA/MCS.htm" style="text-decoration: none"><font color="white">陸生</a></span></button>
         <div id="wrapper_3" class="open_3">
             <ul id="list_3">
-      <a href="http://google.com" class="panel_body">·大陸地區學生身分申請就讀</a><br>
-      <a href="http://google.com" class="panel_body">·臺北科大碩博士課程</a>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·大陸地區學生身分申請就讀</a><br>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·臺北科大碩博士課程</a>
   </ul>
       </div>
 
-      <button class="panel-heading_4" id="button_4"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">獎學金</a></span></button>
+      <button class="panel-heading_4" id="button_4"><span><a href="https://tsejunzhen.github.io/Project_OIA/scholaships.htm" style="text-decoration: none"><font color="white">獎學金</a></span></button>
   <div id="wrapper_4" class="open_4">
         <ul id="list_4">
-      <a href="http://google.com" class="panel_body">·外籍生獎學金</a><br>
-      <a href="http://google.com" class="panel_body">·僑生(含港澳生)獎學金</a><br>
-      <a href="http://google.com" class="panel_body">·陸生獎學金</a><br>
-      <a href="http://google.com" class="panel_body">·其他獎學金</a>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·外籍生獎學金</a><br>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·僑生(含港澳生)獎學金</a><br>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·陸生獎學金</a><br>
+      <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="panel_body">·其他獎學金</a>
   </ul>
       </div>
 
@@ -133,19 +140,19 @@
     </div>
     <div id="indexSlides_4">
       <div class="container">
-        <a href="http://google.com" >
+        <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
             <div class="icon_bg2"></div>
             <div class="icon_label_2">系所資訊</div>
         </a>
-        <a href="http://google.com" >
+        <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
             <div class="icon_bg3"></div>
             <div class="icon_label_3">住宿資訊</div>
         </a>
-        <a href="http://google.com" >
+        <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
           <div class="icon_bg4"></div>
           <div class="icon_label_4">簽證資訊</div>
         </a>
-        <a href="http://google.com" >
+        <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
           <div class="icon_bg1"></div>
           <div class="icon_label_1">招生資訊</div>
         </a>
