--- a/exchange.htm
+++ b/exchange.htm
@@ -11,34 +11,52 @@
   <body>
         <ul id="indexSlides_1">
           <div class="container">
-          <a href="http://google.com" class="logo"></a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="logo"></a>
 
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
+            <div class="logo_world_ch1">國立臺北科技大學國際事務處</div>
             <div class="logo_world_ch">國立臺北科技大學國際事務處</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
             <div class="logo_world_en">Office of International Affairs, Taipei Tech</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/index_en.htm">
+            <div class="language_en1">en</div>
+            <div class="language_en">en</div>
+            </a>
+            <p class ="language_line1" >|</p>
+            <p class ="language_line" >|</p>
+            <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
+            <div class="language_ch1">中</div>
+            <div class="language_ch">中</div>
+            </a>
+            <a href="https://tsejunzhen.github.io/Project_OIA/about.htm">
+            <div class="world_about1">關於我們</div>
             <div class="world_about">關於我們</div>
             </a>
-            <a href="http://google.com">
-          <div class="world_new">最新消息</div>
+            <a href="https://tsejunzhen.github.io/Project_OIA/news.htm">
+          <div class="world_new1">最新消息</div>
+        <div class="world_new">最新消息</div>
         </a>
-        <a href="http://google.com">
-          <div class="world_guide">實用指南</div>
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
+          <div class="world_guide1">實用指南</div>
+            <div class="world_guide">實用指南</div>
         </a>
-        <a href="http://google.com">
-          <div class="world_axchange">交換學生</div>
+        <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
+          <div class="world_axchange1">交換學生</div>
+            <div class="world_axchange">交換學生</div>
         </a>
-        <a href="http://google.com">
-          <div class="world_contact">聯絡我們</div>
+        <a href="https://tsejunzhen.github.io/Project_OIA/contact.htm">
+          <div class="world_contact1">聯絡我們</div>
+            <div class="world_contact">聯絡我們</div>
         </a>
-        <a href="http://google.com">
-          <div class="world_main_ch">國立台北科技大學國際事務處</div>
+        <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
+          <div class="world_main_ch">STUDENT EXCHANGE</div>
+            <p class="world_main_ch_p">STUDENT EXCHANGE</p>
         </a>
-        <a href="http://google.com">
-          <div class="world_main_en">Office of International Affairs,Taipei Tech</div>
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
+          <div class="world_main_en">交換學生</div>
+          <p class="world_main_en_p">交換學生</p>
         </a>
         </ul>
     </div>
