--- a/contact.htm
+++ b/contact.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
   <head>
     <title>Contact</title>
@@ -57,9 +57,78 @@
 
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
-    <div class="container">
+    <div class="container_large">
+      <div class="big_Border"></div>
+    <button id="human_pic_1" class="btn1"></button>
+    <div class="text_1a">Director<br><br>
+        Shiao-Shing Chen<br>
+        ext. 6501<br>
+        dean@ntut.edu.tw
+    </div>
+    <div class="text_1b">Director<br><br>
+        Shiao-Shing Chen<br>
+        ext. 6501<br>
+        dean@ntut.edu.tw
+    </div>
 
+    <button id="human_pic_2" class="btn2"></button>
+    <div class="text_2a">Secretary<br><br>
+      Flora Chen<br>
+        ext. 6501<br>
+        dean@ntut.edu.tw
+    </div>
+    <div class="text_2b">Secretary<br><br>
+        Flora Chen<br>
+        ext. 6501<br>
+        dean@ntut.edu.tw
+    </div>
+    <button id="human_pic_3" class="btn3"></button>
+    <div class="text_3a">Executive Assistant<br><br>
+        Jessie Lin<br>
+        ext. 1017<br>
+        jessie@ntut.edu.tw
+    </div>
+    <div class="text_3b">Executive Assistant<br><br>
+        Jessie Lin<br>
+        ext. 1017<br>
+        jessie@ntut.edu.tw
+    </div>
+    <button id="human_pic_4" class="btn4"></button>
+    <div class="text_4a">International Cooperation Section Cheif<br><br>
+        Meen-Wah Gui<br>
+        ext. 6511<br>
+        danzel@ntut.edu.tw
+    </div>
+    <div class="text_4b">International Cooperation Section Cheif<br><br>
+        Meen-Wah Gui<br>
+        ext. 6511<br>
+        danzel@ntut.edu.tw
+    </div>
 
+    <button id="human_pic_5" class="btn5"></button>
+
+    <div class="text_5a">International Cooperation Section Assistant<br><br>
+        Oby Wang<br>
+        ext. 6512<br>
+        oby_wang@ntut.edu.tw
+    </div>
+    <div class="text_5b">International Cooperation Section Assistant<br><br>
+        Oby Wang<br>
+        ext. 6512<br>
+        oby_wang@ntut.edu.tw
+    </div>
+    <button id="human_pic_6" class="btn6"></button>
+
+        <div class="text_6a">Cross-Strait Affairs Section Cheif<br><br>
+            Samantha Wang<br>
+            ext. 6522<br>
+            Samantha@ntut.edu.tw
+        </div>
+        <div class="text_6b">Cross-Strait Affairs Section Cheif<br><br>
+            Samantha Wang<br>
+            ext. 6522<br>
+            Samantha@ntut.edu.tw
+        </div>
   </div><!--container-->
 </div><!--indexSlides_3-->
 
