--- a/news.htm
+++ b/news.htm
@@ -48,7 +48,7 @@
         <div class="link_SS">
         <a  href="https://tsejunzhen.github.io/Project_OIA/index.htm" style="text-decoration: none"><font color="black">Home <a href="#" style="text-decoration: none">>
         </a>
-        <a href="https://tsejunzhen.github.io/Project_OIA/news.htm" style="text-decoration: none"><font color="black">News 
+        <a href="https://tsejunzhen.github.io/Project_OIA/news.htm" style="text-decoration: none"><font color="black">News
         </a>
       </a>
     </a>
@@ -58,8 +58,36 @@
 
   </div><!--indexSlides_2-->
   <div id="indexSlides_3">
-    <div class="container">
-
+    <div class="container_large">
+    <div class="img_1"></div>
+    <div class="line_1"></div>
+    <div class="border_1"></div>
+    <div class="text_1">2017 Lu-Kang Dragon Boat Festival Celebration Series
+    <br><br>2017-03-24
+    </div>
+    <div class="img_2"></div>
+        <div class="line_2"></div>
+          <div class="border_2"></div>
+          <div class="text_2">Community Cultural Activity in Tainan
+          <br><br>2017-03-14
+          </div>
+    <div class="img_3"></div>
+        <div class="line_3"></div>
+          <div class="border_3"></div>
+          <div class="text_3">2016 Fantastic Mongolia-vedio project competition
+          <br><br>2016-10-04
+          </div>
+    <div class="img_4"></div>
+        <div class="line_4"></div>
+          <div class="border_4"></div>
+          <div class="text_4">Formal TOCFL test of 2016 will be administered
+          <br><br>2016-09-23
+          </div>
+    <div class="img_5"></div>
+      <div class="border_5"></div>
+      <div class="text_5">Student Portal is available for new students to log!
+      <br><br>2016-08-25
+      </div>
 
   </div><!--container-->
 </div><!--indexSlides_3-->
