--- a/exchange.htm
+++ b/exchange.htm
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style_exchange.css" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="image/logo.gif" />
     <script type="text/javascript" src="js/indexjs.js"></script>
   </head>
   <body>
@@ -77,15 +78,73 @@
     <div class="container">
 
 
+          <a href="https://tsejunzhen.github.io/Project_OIA/OCS.htm">
+          <div class="box01">
+              <div class="transparent1"></div>
+              <div class="pic01"></div>
+                  <div class="transparent"></div>
+              <p class="label_01">PARTNER UNIVERSITY</p>
+          </a>
+                  <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
+                    <div class="box02">
+                      <div class="pic02"></div>
+                          <div class="transparent"></div>
+                      <p class="label_02">APPLICATION</p>
+                  </a>
+                        <a href="https://www.ntut.edu.tw/ezfiles/21/1021/img/1304/newBig01-13-2014.jpg">
+                          <div class="box03">
+                              <div class="transparent1"></div>
+                            <div class="pic03"></div>
+                                <div class="transparent"></div>
+                            <p class="label_03">EXPERIENCE SHARING</p>
+                        </a>
+                          </div>
+                    </div>
+            </div>
+
+      <a href="https://tsejunzhen.github.io/Project_OIA/scholarships.htm">
+          <div class="box11">
+              <div class="transparent1"></div>
+              <div class="pic11"></div>
+                  <div class="transparent"></div>
+              <p class="label_11">ALLOWANCE</p>
+            </a>
+              <a href="https://nportal.ntut.edu.tw/index.do?thetime=1412421457275">
+                <div class="box12">
+                    <div class="transparent1"></div>
+                  <div class="pic12"></div>
+                      <div class="transparent"></div>
+                  <p class="label_12">DOCUMENT DOWNLOAD</p>
+              </a>
+                <a href="https://webmail.ntut.edu.tw/index_p.html#1">
+                  <div class="box13">
+                      <div class="transparent1"></div>
+                    <div class="pic13"></div>
+                        <div class="transparent"></div>
+                    <p class="label_13">IMPORTANT INFORMATION</p>
+                </a>
+                  </div>
+              </div>
+          </div>
+
+
+
   </div><!--container-->
 </div><!--indexSlides_3-->
 
-    <footer id="foother_slides">
-      <div class="container">
-      <div class="footer_map"></div>
-      <div class="footer_bg_white"></div>
-      </div><!--container-->
-    </footer><!--indexSlides_3-->
+<footer id="foother_slides">
+  <div class="container">
+  <div class="footer_map"></div>
+  <div class="footer_bg_white"></div>
+  <p class ="footer_label" >Office of International Affairs, National Taipei University of Technology<br>
+                           1, Sec. 3, Zhong-Xiao (Chung-Hsiao) E. Rd., Da’an Dist., <br>
+                           Taipei City 106, Taiwan (R.O.C.)<br>
+                           TEL：886-2-2771-2171#6500<br>
+                           FAX：886-2-8773-1879<br>
+                           E-mail：intstudy@ntut.edu.tw
+  </p>
+  </div>
+</footer>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
         <script src="js/indexjs.js"></script>
