--- a/guide.htm
+++ b/guide.htm
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style_guide.css" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="image/logo.gif" />
     <script type="text/javascript" src="js/indexjs.js"></script>
   </head>
   <body>
@@ -73,7 +74,7 @@
     </div><!--container_mini-->
 
   </div><!--indexSlides_2-->
-  <div id="indexSlides_3"> 
+  <div id="indexSlides_3">
     <div class="container">
 
     <a href="https://tsejunzhen.github.io/Project_OIA/OCS.htm">
