all pages add tab icon

--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="image/logo.gif" />
     <script type="text/javascript" src="js/indexjs.js"></script>
   </head>
   <body>
@@ -86,7 +87,7 @@
       <div class="container_panel">
       <div class="panel_group">
       <button class="panel-heading_1" id="button_1"><span><a href="https://tsejunzhen.github.io/Project_OIA/IS.htm" style="text-decoration: none" ><font color="white">外籍生</a></span></button>
-    
+
       <button class="panel-heading_2" id="button_2"><span><a href="https://tsejunzhen.github.io/Project_OIA/OCS.htm" style="text-decoration: none"><font color="white">僑生</a></span></button>
 
 
