--- a/scholarships.htm
+++ b/scholarships.htm
@@ -12,35 +12,53 @@
   <body>
         <ul id="indexSlides_1">
           <div class="container">
-          <a href="http://google.com" class="logo"></a>
+            <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" class="logo"></a>
 
-            <a href="http://google.com">
-            <div class="logo_world_ch">國立臺北科技大學國際事務處</div>
-            </a>
-            <a href="http://google.com">
-            <div class="logo_world_en">Office of International Affairs, Taipei Tech</div>
-            </a>
-            <a href="http://google.com">
-            <div class="world_about">關於我們</div>
-            </a>
-            <a href="http://google.com">
+              <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
+              <div class="logo_world_ch1">國立臺北科技大學國際事務處</div>
+              <div class="logo_world_ch">國立臺北科技大學國際事務處</div>
+              </a>
+              <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
+              <div class="logo_world_en">Office of International Affairs, Taipei Tech</div>
+              </a>
+              <a href="https://tsejunzhen.github.io/Project_OIA/index_en.htm">
+              <div class="language_en1">en</div>
+              <div class="language_en">en</div>
+              </a>
+              <p class ="language_line1" >|</p>
+              <p class ="language_line" >|</p>
+              <a href="https://tsejunzhen.github.io/Project_OIA/index.htm">
+              <div class="language_ch1">中</div>
+              <div class="language_ch">中</div>
+              </a>
+              <a href="https://tsejunzhen.github.io/Project_OIA/about.htm">
+              <div class="world_about1">關於我們</div>
+              <div class="world_about">關於我們</div>
+              </a>
+              <a href="https://tsejunzhen.github.io/Project_OIA/news.htm">
+            <div class="world_new1">最新消息</div>
           <div class="world_new">最新消息</div>
-        </a>
-        <a href="http://google.com">
-          <div class="world_guide">實用指南</div>
-        </a>
-        <a href="http://google.com">
-          <div class="world_axchange">交換學生</div>
-        </a>
-        <a href="http://google.com">
-          <div class="world_contact">聯絡我們</div>
-        </a>
-        <a href="http://google.com">
-          <div class="world_main_ch">國立台北科技大學國際事務處</div>
-        </a>
-        <a href="http://google.com">
-          <div class="world_main_en">Office of International Affairs,Taipei Tech</div>
-        </a>
+          </a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
+            <div class="world_guide1">實用指南</div>
+              <div class="world_guide">實用指南</div>
+          </a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
+            <div class="world_axchange1">交換學生</div>
+              <div class="world_axchange">交換學生</div>
+          </a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/contact.htm">
+            <div class="world_contact1">聯絡我們</div>
+              <div class="world_contact">聯絡我們</div>
+          </a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
+            <div class="world_main_ch">G U I D E</div>
+              <p class="world_main_ch_p">G U I D E</p>
+          </a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
+            <div class="world_main_en">實用指南</div>
+            <p class="world_main_en_p">實用指南</p>
+          </a>
         </ul>
     </div>
     <div id="indexSlides_2">
@@ -66,84 +84,64 @@
       <div class="panel_group">
 
 <!--123-->
-<div class="text">外籍生獎學金</div><br>
-      <button class="panel-heading_1" id="button_1"><span><a href="http://www.computerhope.com" style="text-decoration: none" ><font color="white">臺灣獎學金</a></span></button>
+<div class="text">International Students Scholarship</div><br>
+      <button class="panel-heading_1" id="button_1"><span><font color="white">Taipei Tech Scholarships</span></button>
       <div id="wrapper_1" class="open_1">
       <ul id="list_1">
-        <div class="panel_body">·單獨招生</div>
-        <div class="panel_body">·流程圖海外聯招</div>
-        <div class="panel_body">·流程圖海外聯招</div>
-        <div class="panel_body">·流程圖海外聯招</div>
+        <div class="panel_body">Taipei Tech Scholarships include "Foreign Student Scholarship" and "International Graduate Student Scholarship." The following offers a brief introduction to the two types of scholarships.</div>
       </div>
 
-      <button class="panel-heading_2" id="button_2"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">國立臺北科技大學外國籍學生獎學金</a></span></button>
+      <button class="panel-heading_2" id="button_2"><span>Taiwan Scholarship</span></button>
       <div id="wrapper_2" class="open_2">
       <ul id="list_2">
-      <div class="panel_body">·單獨招生</div>
-      <div class="panel_body">·流程圖海外聯招</div>
-      <div class="panel_body">·流程圖海外聯招</div>
-      <div class="panel_body">·流程圖海外聯招</div>
+      <div class="panel_body">Taiwan Scholarship is provided by the Taiwan Government. The purpose is to attract outstanding students to pursue academic degrees in Taiwan and to deepen their understanding of Taiwan’s academic environment and culture, thereby enhancing exchanges and building friendships between Taiwan and their home nations. Taiwan Scholarship is, in principle, granted to students from countries that have diplomatic relations with Taiwan. Special consideration, however, may also be given to students from other countries.</div>
     </ul>
       </div>
 
-      <button class="panel-heading_3" id="button_3"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">陸生</a></span></button>
+      <button class="panel-heading_3" id="button_3"><span><font color="white">Foreign Student Scholarship</span></button>
         <div id="wrapper_3" class="open_3">
             <ul id="list_3">
-              <div class="panel_body">·單獨招生</div>
-              <div class="panel_body">·流程圖海外聯招</div>
-              <div class="panel_body">·流程圖海外聯招</div>
-              <div class="panel_body">·流程圖海外聯招</div>
+              <div class="panel_body">Eligibility</div><br>
+                <div class="panel_body">·All current Taipei Tech international students who have completed at least one semester at Taipei Tech and fulfilled one of the criteria listed below are eligible to apply.</div><br>
+                  <div class="panel_body">·Recipients of scholarship or subsidy offered by any government, research or educational institution will not be considered.</div>
   </ul>
       </div>
       <br><br><br>
 <div class="text">僑生(含港澳生)獎學金</div><br>
-      <button class="panel-heading_4" id="button_4"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">獎學金</a></span></button>
+      <button class="panel-heading_4" id="button_4"><font color="white">獎學金</span></button>
   <div id="wrapper_4" class="open_4">
         <ul id="list_4">
-          <div class="panel_body">·單獨招生</div>
-          <div class="panel_body">·流程圖海外聯招</div>
-          <div class="panel_body">·流程圖海外聯招</div>
-          <div class="panel_body">·流程圖海外聯招</div>
+          <div class="panel_body">國立臺北科技大學為獎勵優秀僑生申請就讀本校，特提供「國立臺北科技大學僑生獎學金」。</div>
   </ul>
       </div>
-      <button class="panel-heading_5" id="button_5"><span><a href="http://www.computerhope.com" style="text-decoration: none" ><font color="white">國立臺北科技大學大陸地區優秀學生獎學金要點</a></span></button>
+      <button class="panel-heading_5" id="button_5"><span><font color="white">申請方式</span></button>
       <div id="wrapper_5" class="open_5">
       <ul id="list_5">
-        <div class="panel_body">·單獨招生</div>
-        <div class="panel_body">·流程圖海外聯招</div>
-        <div class="panel_body">·流程圖海外聯招</div>
-        <div class="panel_body">·流程圖海外聯招</div>
+        <div class="panel_body">僑生於每年11月左右向國際事務處提出申請，需檢附獎學金申請表乙份、上一學年成績單、自傳及生活、經濟狀況說明以及其他有助審查之文件：如參加課外活動幹部證明，參加校內外競賽獲獎證明。</div>、
       </div>
       <br><br><br>
 <div class="text" >陸生獎學金</div><br>
-      <button class="panel-heading_6" id="button_6"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">國立臺北科技大學外國籍學生獎學金</a></span></button>
+      <button class="panel-heading_6" id="button_6"><span><a href="#" style="text-decoration: none"><font color="white">國立臺北科技大學大陸地區優秀學生獎學金要點</span></button>
       <div id="wrapper_6" class="open_6">
       <ul id="list_6">
-      <div class="panel_body">·單獨招生</div>
-      <div class="panel_body">·流程圖海外聯招</div>
-      <div class="panel_body">·流程圖海外聯招</div>
-      <div class="panel_body">·流程圖海外聯招</div>
+      <div class="panel_body"為吸引大陸地區優秀學生至國立臺北科技大學（以下簡稱本校）就讀，且獎勵在學期間學業操行優良者，特訂定本校大陸地區優秀學生獎學金要點（以下簡稱本要點）申請及審核作業。</div>
+
     </ul>
       </div>
 
-      <button class="panel-heading_7" id="button_7"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">陸生</a></span></button>
+      <button class="panel-heading_7" id="button_7"><span><a href="#" style="text-decoration: none"><font color="white">申請對象</span></button>
         <div id="wrapper_7" class="open_7">
             <ul id="list_7">
-              <div class="panel_body">·單獨招生</div>
-              <div class="panel_body">·流程圖海外聯招</div>
-              <div class="panel_body">·流程圖海外聯招</div>
-              <div class="panel_body">·流程圖海外聯招</div>
+              <div class="panel_body">新生：凡經由大學校院招收大陸地區學生聯合招生委員會申請通過，經本校錄取並註冊就讀之新生，擇優給獎，為期一年。</div>
+              <div class="panel_body">在校生：具本校學籍之大陸地區研究生，可憑其學業成績、研究成果及指導教授推薦信，申請次年獎學金。</div>
   </ul>
       </div>
       <br><br><br>
 <div class="text">其他獎學金</div><br>
-      <button class="panel-heading_8" id="button_8"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">臺灣獎學金</a></span></button>
+      <button class="panel-heading_8" id="button_8"><span><a href="#" style="text-decoration: none"><font color="white">臺灣獎學金</span></button>
   <div id="wrapper_8" class="open_8">
         <ul id="list_8">
-          <div class="panel_body">·單獨招生</div>
-          <div class="panel_body">·流程圖海外聯招</div>
-          <div class="panel_body">·流程圖海外聯招</div>
-          <div class="panel_body">·流程圖海外聯招</div>
+          <div class="panel_body">其他</div>
   </ul>
       </div>
   </div><!--panelgroup-->
@@ -151,12 +149,18 @@
   </div><!--container-->
 </div><!--indexSlides_3-->
 
-    <footer id="foother_slides">
-      <div class="container">
-      <div class="footer_map"></div>
-      <div class="footer_bg_white"></div>
-      </div><!--container-->
-    </footer><!--indexSlides_3-->
+<footer id="foother_slides">
+  <div class="container">
+  <div class="footer_map"></div>
+  <div class="footer_bg_white"></div>
+  <p class ="footer_label" >國立臺北科技大學國際事務處<br>
+                           10608 台北市大安區忠孝東路三段一號（第二教學大樓一樓）<br>
+                           TEL：886-2-2771-2171#6500<br>
+                           FAX：886-2-8773-1879<br>
+                           E-mail：intstudy@ntut.edu.tw
+  </p>
+  </div>
+</footer>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
         <script src="js/indexjs.js"></script>
